config/includes.chroot/etc/iptables.rules
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:digabi-input - [0:0]
:digabi-output - [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -m comment --comment "Allow existing connections." -j ACCEPT
-A INPUT -d 127.0.0.0/8 -i lo -p tcp -m tcp --dport 1025:65535 -m comment --comment "Allow local connections to non-privileged ports." -j ACCEPT
-A INPUT -p icmp --icmp-type echo-request -j ACCEPT -m comment --comment "Allow ping request (someone pinging us)."
-A INPUT -m comment --comment "Custom Digabi rules." -j digabi-input
-A INPUT -m comment --comment "Log other traffic, before dropping it." -m limit --limit 2/min -j LOG --log-prefix "iptables reject "
-A INPUT -m comment --comment "Reject traffic (tcp)." -p tcp -j REJECT --reject-with tcp-reset
-A INPUT -m comment --comment "Reject traffic (udp)." -p udp -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p udp -m udp --sport 68 --dport 67 -m comment --comment "Allow DHCP (client-to-server)." -j ACCEPT
-A OUTPUT -p icmp --icmp-type echo-reply -j ACCEPT -m comment --comment "Allow ping reply (ie. allow sending pong)."
-A OUTPUT -m comment --comment "Custom Digabi rules." -j digabi-output
-A OUTPUT -m comment --comment "Log other traffic, before dropping it." -m limit --limit 2/min -j LOG --log-prefix "iptables reject "
-A OUTPUT -m comment --comment "Reject traffic (tcp)." -p tcp -j REJECT --reject-with tcp-reset
-A OUTPUT -m comment --comment "Reject traffic (udp)." -p udp -j REJECT --reject-with icmp-port-unreachable
-A digabi-input -p tcp -m tcp --dport 22 -j ACCEPT
-A digabi-input -j RETURN
-A digabi-output -p udp -m udp --dport 53 -j ACCEPT
-A digabi-output -p tcp -m tcp --dport 8123 -s 127.0.0.0/8 -d 127.0.0.0/8 -m owner --uid-owner dansguardian -j ACCEPT -m comment --comment "Allow proxy access for dansguardian (dansguardian -> proxy)."
-A digabi-output -p tcp -m tcp --dport 8080 -s 127.0.0.0/8 -d 127.0.0.0/8 -j ACCEPT -m comment --comment "Allow dansguardian access for all users (user -> dansguardian -> proxy)."
#-A digabi-output -p tcp -m tcp --dport 80 -m owner --uid-owner proxy -j ACCEPT -m comment --comment "Allow HTTP for user proxy."
#-A digabi-output -p tcp -m tcp --dport 443 -m owner --uid-owner proxy -j ACCEPT -m comment --comment "Allow HTTPS for user proxy."
-A digabi-output -p tcp -m tcp --dport 80 -j ACCEPT -m comment --comment "Allow HTTP."
-A digabi-output -p tcp -m tcp --dport 443 -j ACCEPT -m comment --comment "Allow HTTPS."
-A digabi-output -p tcp -m tcp --dport 3128 -j ACCEPT -m comment --comment "Temporarily allow access to 3128/tcp (Squid Proxy default port)."
-A digabi-output -j RETURN
COMMIT
